--- a/assets/CSS/register_styles.css
+++ b/assets/CSS/register_styles.css
@@ -45,11 +45,11 @@ form {
 }
 
 .wrapper {
-  background-image: url("../images/backgrounds/teddy_armennano_Pixabay.jpg");
+  background-image: url("../images/backgrounds/cuddling_animals.webp");
   background-size: cover;
-  background-position: center;
+  background-position: bottom;
   background-repeat: no-repeat;
-  height: 220%;
+  height: 100%;
   width: auto;
 }
 
