changed background img, added logic to handle requests and add post via profile page

--- a/assets/CSS/register_styles.css
+++ b/assets/CSS/register_styles.css
@@ -45,7 +45,7 @@ form {
 }
 
 .wrapper {
-  background-image: url("../images/backgrounds/cuddling_animals.webp");
+  background-image: url("../images/backgrounds/lego_background.png");
   background-size: cover;
   background-position: bottom;
   background-repeat: no-repeat;
