--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -625,6 +625,39 @@ border: 1px solid var(--border-color-boxes);
   margin: 0;
 }
 
+.search {
+  margin: 8px 0 0 150px;
+}
+
+.search #search_text_input {
+  border: thin solid var(--border-color-boxes);
+  float: left;
+  height: 23px;
+  outline: 0;
+  width: 100px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+
+}
+
+.button_holder {
+  background-color: var(--primary-color-lightest);
+  border: thin solid var(--border-color-boxes);
+  cursor: pointer;
+  float: left;
+  height: 23px;
+  text-align: center;
+  width: 50px;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+
+}
+
+.button_holder img {
+  margin-top: 1px;
+  width: 20px;
+}
+
 
  
 
