--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -528,7 +528,7 @@ border: 1px solid var(--border-color-boxes);
 
 .resultDisplay {
   padding: 5px 5px 0 5px;
-  height: 60px;
+  height: 90px;
   border-bottom: 1px solid var(--border-color-boxes);
 }
 
@@ -656,6 +656,27 @@ border: 1px solid var(--border-color-boxes);
 .button_holder img {
   margin-top: 1px;
   width: 20px;
+}
+
+.search_results {
+  background-color: var(--background-color-light);
+  border: 1px solid var(--border-color-boxes);
+  border-bottom: none;
+  border-top: none;
+  margin-top: 21px;
+}
+
+.search_results_footer {
+  padding: 7px 4px 0px 4px;
+  height: 30px;
+  border: 1px solid var(--border-color-boxes);
+  background-color: var(--primary-color-darker);
+  text-align: center;
+}
+
+.search_results_footer a {
+  color: var(--font-color-light);
+  text-decoration: none;
 }
 
 
